idl and readme
