# gen/iwfidl/model_on_query_attribute_change_command.go
@@ -1,137 +1,0 @@
-/*
-Workflow APIs
-
-This APIs for iwf SDKs to operate workflows
-
-API version: 1.0.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package iwfidl
-
-import (
-	"encoding/json"
-)
-
-// OnQueryAttributeChangeCommand struct for OnQueryAttributeChangeCommand
-type OnQueryAttributeChangeCommand struct {
-	CommandId string `json:"commandId"`
-	AttributeKey string `json:"attributeKey"`
-}
-
-// NewOnQueryAttributeChangeCommand instantiates a new OnQueryAttributeChangeCommand object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewOnQueryAttributeChangeCommand(commandId string, attributeKey string) *OnQueryAttributeChangeCommand {
-	this := OnQueryAttributeChangeCommand{}
-	this.CommandId = commandId
-	this.AttributeKey = attributeKey
-	return &this
-}
-
-// NewOnQueryAttributeChangeCommandWithDefaults instantiates a new OnQueryAttributeChangeCommand object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewOnQueryAttributeChangeCommandWithDefaults() *OnQueryAttributeChangeCommand {
-	this := OnQueryAttributeChangeCommand{}
-	return &this
-}
-
-// GetCommandId returns the CommandId field value
-func (o *OnQueryAttributeChangeCommand) GetCommandId() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.CommandId
-}
-
-// GetCommandIdOk returns a tuple with the CommandId field value
-// and a boolean to check if the value has been set.
-func (o *OnQueryAttributeChangeCommand) GetCommandIdOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.CommandId, true
-}
-
-// SetCommandId sets field value
-func (o *OnQueryAttributeChangeCommand) SetCommandId(v string) {
-	o.CommandId = v
-}
-
-// GetAttributeKey returns the AttributeKey field value
-func (o *OnQueryAttributeChangeCommand) GetAttributeKey() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.AttributeKey
-}
-
-// GetAttributeKeyOk returns a tuple with the AttributeKey field value
-// and a boolean to check if the value has been set.
-func (o *OnQueryAttributeChangeCommand) GetAttributeKeyOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.AttributeKey, true
-}
-
-// SetAttributeKey sets field value
-func (o *OnQueryAttributeChangeCommand) SetAttributeKey(v string) {
-	o.AttributeKey = v
-}
-
-func (o OnQueryAttributeChangeCommand) MarshalJSON() ([]byte, error) {
-	toSerialize := map[string]interface{}{}
-	if true {
-		toSerialize["commandId"] = o.CommandId
-	}
-	if true {
-		toSerialize["attributeKey"] = o.AttributeKey
-	}
-	return json.Marshal(toSerialize)
-}
-
-type NullableOnQueryAttributeChangeCommand struct {
-	value *OnQueryAttributeChangeCommand
-	isSet bool
-}
-
-func (v NullableOnQueryAttributeChangeCommand) Get() *OnQueryAttributeChangeCommand {
-	return v.value
-}
-
-func (v *NullableOnQueryAttributeChangeCommand) Set(val *OnQueryAttributeChangeCommand) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableOnQueryAttributeChangeCommand) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableOnQueryAttributeChangeCommand) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableOnQueryAttributeChangeCommand(val *OnQueryAttributeChangeCommand) *NullableOnQueryAttributeChangeCommand {
-	return &NullableOnQueryAttributeChangeCommand{value: val, isSet: true}
-}
-
-func (v NullableOnQueryAttributeChangeCommand) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableOnQueryAttributeChangeCommand) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
