# integ/workflow/interstate/routers.go
@@ -1,0 +1,98 @@
+package interstate
+
+import (
+	"github.com/cadence-oss/iwf-server/gen/iwfidl"
+	"github.com/cadence-oss/iwf-server/service"
+	"github.com/gin-gonic/gin"
+	"log"
+	"net/http"
+)
+
+const (
+	WorkflowType = "basic"
+	State1       = "S1"
+	State21      = "S21"
+	State22      = "S22"
+	State31      = "S31"
+)
+
+type handler struct {
+	invokeHistory map[string]int64
+}
+
+func NewHandler() *handler {
+	return &handler{
+		invokeHistory: make(map[string]int64),
+	}
+}
+
+// ApiV1WorkflowStartPost - for a workflow
+func (h *handler) ApiV1WorkflowStateStart(c *gin.Context) {
+	var req iwfidl.WorkflowStateStartRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	log.Println("received state start request, ", req)
+
+	if req.GetWorkflowType() == WorkflowType {
+		// basic workflow go straight to decide methods without any commands
+		if req.GetWorkflowStateId() == State1 || req.GetWorkflowStateId() == State21 {
+			h.invokeHistory[req.GetWorkflowStateId()+"_start"]++
+			c.JSON(http.StatusOK, iwfidl.WorkflowStateStartResponse{
+				CommandRequest: &iwfidl.CommandRequest{
+					DeciderTriggerType: service.DeciderTypeAllCommandCompleted,
+				},
+			})
+			return
+		}
+	}
+
+	c.JSON(http.StatusBadRequest, struct{}{})
+}
+
+func (h *handler) ApiV1WorkflowStateDecide(c *gin.Context) {
+	var req iwfidl.WorkflowStateDecideRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	log.Println("received state decide request, ", req)
+
+	if req.GetWorkflowType() == WorkflowType {
+		h.invokeHistory[req.GetWorkflowStateId()+"_decide"]++
+		if req.GetWorkflowStateId() == State1 {
+			// go to S2
+			c.JSON(http.StatusOK, iwfidl.WorkflowStateDecideResponse{
+				StateDecision: &iwfidl.StateDecision{
+					NextStates: []iwfidl.StateMovement{
+						{
+							StateId:        State21,
+							NextStateInput: req.StateInput,
+						},
+					},
+				},
+			})
+			return
+		} else if req.GetWorkflowStateId() == State21 {
+			// go to complete
+			c.JSON(http.StatusOK, iwfidl.WorkflowStateDecideResponse{
+				StateDecision: &iwfidl.StateDecision{
+					NextStates: []iwfidl.StateMovement{
+						{
+							StateId:        service.GracefulCompletingWorkflowStateId,
+							NextStateInput: req.StateInput,
+						},
+					},
+				},
+			})
+			return
+		}
+	}
+
+	c.JSON(http.StatusBadRequest, struct{}{})
+}
+
+func (h *handler) GetTestResult() (map[string]int64, map[string]interface{}) {
+	return h.invokeHistory, nil
+}
